[package]
name = "gameoflife"
version = "0.1.0"
authors = ["Leandro Santiago <leandrosansilva@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.5.4"
rayon = "1.0.3"
pest_derive = "2.1.0"
pest = "2.1.1"

[dev-dependencies]
criterion = "0.2.7"

[[bench]]
name = "world_benchmark"
harness = false
